mqtt/mosquitto.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: ws
      port: 8080
      targetPort: 8080
  selector:
    app: mosquitto
